# CMakeQtTemplate

./: CMakeLists.txt
QtSampleLib/include/QtSampleLib/: TestClass.h
QtSampleLib/src/: CMakeLists.txt  TestClass.cpp
QtSampleLib/test/: CMakeLists.txt  TestClassTest.cpp
QtSampleProject/: CMakeLists.txt
